--- a/frontend/src/styles/keyframes.css
+++ b/frontend/src/styles/keyframes.css
@@ -6,3 +6,12 @@
     opacity: 1;
   }
 }
+
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
